peac_dev/force-app/main/default/objects/Modifier__c/Modifier__c.object-meta.xml
<CustomObject>
    <description>Pricing users should configure modifiers that adjust base rates or residual tables without hard-coding logic.</description>
    <label>Modifier</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Modifier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Modifiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>