peac_dev/force-app/main/default/objects/Modifier__c/fields/Modifier_Table_Type__c.field-meta.xml
<CustomField>
    <fullName>Modifier_Table_Type__c</fullName>
    <formula>TEXT(Rate_Card__r.Rate_Card_Type__c)</formula>
    <label>Modifier Table Type</label>
    <type>Text</type>
</CustomField>