peac_dev/force-app/main/default/objects/Modifier__c/fields/Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Card</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RateCard__c.Rate_Card_Type__c</field>
            <operation>equals</operation>
            <value>Interest Rate, Rate Factor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RateCard__c</referenceTo>
    <relationshipLabel>Modifiers</relationshipLabel>
    <relationshipName>Modifiers</relationshipName>
    <type>Lookup</type>
</CustomField>