peac_dev/force-app/main/default/objects/Modifier__c/fields/Residual_Balloon_Table__c.field-meta.xml
<CustomField>
    <fullName>Residual_Balloon_Table__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residual/Balloon Table</label>
    <referenceTo>Program_Residual__c</referenceTo>
    <relationshipLabel>Modifiers</relationshipLabel>
    <relationshipName>Modifiers</relationshipName>
    <type>Lookup</type>
</CustomField>